src/snapshots/martian_robots__mission_instructions__test__processing_rob_commands.snap
---
source: src/mission_instructions.rs
assertion_line: 250
expression: result
---
(
    RobotPosition {
        coordinates: Coordinates {
            x: 1,
            y: 1,
        },
        orientation: East,
    },
    Alive,
)
