src/snapshots/martian_robots__mission_instructions__test__processing_rob_commands_fall_off_result.snap
---
source: src/mission_instructions.rs
assertion_line: 263
expression: result
---
(
    RobotPosition {
        coordinates: Coordinates {
            x: 1,
            y: 1,
        },
        orientation: East,
    },
    Lost,
)
