src/snapshots/martian_robots__mission_instructions__test__processing_rob_commands_fall_off_scent.snap
---
source: src/mission_instructions.rs
assertion_line: 276
expression: scent_tracker
---
{
    RobotPosition {
        coordinates: Coordinates {
            x: 1,
            y: 1,
        },
        orientation: East,
    },
}
